# ft_linear_regression

./: .gitignore  Cargo.toml  Makefile  README.md
data/: README.md  diamonds_carat_price.csv  weights
resources/: README.md
src/predict/: main.rs  predictor.rs
src/train/: arguments.rs  keyf64.rs  main.rs  result.rs  trainer.rs
